--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-1.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="https://unaid.netlify.app/" target="_blank">Branding &</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -396,7 +396,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="https://agriculture2.netlify.app/" target="_blank">Branding &</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -405,7 +405,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#" target="_blank">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -414,7 +414,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#" target="_blank">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -423,7 +423,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-5.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#" target="_blank">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -432,7 +432,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#" target="_blank">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -441,7 +441,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-7.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#" target="_blank">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -450,7 +450,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-8.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="#" target="_blank">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
