--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#" target="_blank">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="https://school-unaid.netlify.app/" target="_blank">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
@@ -423,7 +423,7 @@
 					<div class="project img shadow ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-5.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#" target="_blank">Branding &amp; Illustration Design</a></h3>
+							<h3><a href="https://unaid.netlify.app/" target="_blank">Branding &amp; Illustration Design</a></h3>
 							<span>Web Design</span>
 						</div>
 					</div>
