--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 		</div>
 	</nav>
 
-	<!-- carousel section start -->
-	<section id="home-section" >
+	<!-- carousel section start  image wala hearder-->
+	<!-- <section id="home-section" >
 		<div id="new">
 				<img src="images/unaid.png" alt="" width="100%">
 				<div id="new">
@@ -119,7 +119,7 @@
 				 </div>
 				
 		</div>
-	</section>
+	</section> -->
 		 <!-- carousel section close -->
 		  
 		<!-- <section id="home-section" class="hero">
@@ -143,10 +143,52 @@
 			
 			</div>
 		</section> -->
+
+		<section id="home-section" class="hero">
+			<div class="home-slider owl-carousel">
+				<div class="slider-item">
+					<div class="overlay"></div>
+					<div class="container-fluid px-md-0">
+						<div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+							<div class="one-third order-md-last img" style="background-image:url(images/bg_1.jpg);">
+								<div class="overlay"></div>
+								<div class="overlay-1"></div>
+							</div>
+							<div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+								<div class="text">
+									<span class="subheading">Hello! This is Muhammad Unaid</span>
+									<h1 class="mb-4 mt-3"> Generative Ai Chatbot <span>Developer</SPan>     &amp; Creative UI/UX Designer</h1>
+									<p><a href="https://wa.me/923202059130" class="btn btn-primary" target="blank">Hire me</a> <a href="images/Unaid-resume.pdf" class="btn btn-primary btn-outline-primary" target="blank" >Download CV</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+	
+				<div class="slider-item">
+					<div class="overlay"></div>
+					<div class="container-fluid px-md-0">
+						<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+							<div class="one-third order-md-last img" style="background-image:url(images/bg_2.jpg);">
+								<div class="overlay"></div>
+								<div class="overlay-1"></div>
+							</div>
+							<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+								<div class="text">
+									<span class="subheading">We Design &amp; Build Brands</span>
+									<h1 class="mb-4 mt-3">Hi, I am <span>M.Unaid</span> This is my favorite work.</h1>
+									<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section> 
 	
 
 	
-
+			<br><br> <br>
 	<section class="ftco-about ftco-section ftco-no-pt ftco-no-pb" id="about-section">
 		<div class="container">
 			<div class="row d-flex no-gutters">
