--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 								<div class="text">
 									<span class="subheading">Hello! This is Muhammad Unaid</span>
 									<h1 class="mb-4 mt-3"> Generative Ai Chatbot <span>Developer</SPan>     &amp; Creative UI/UX Designer</h1>
-									<p><a href="https://wa.me/923202059130" class="btn btn-primary" target="blank">Hire me</a> <a href="images/Unaid-resume.pdf" class="btn btn-primary btn-outline-primary" target="blank" >Download CV</a></p>
+									<p><a href="https://wa.me/923202059130" class="btn btn-primary" target="blank">Hire me</a> <a href="images/@Unaid_official_Resume.pdf" class="btn btn-primary btn-outline-primary" target="blank" >Download CV</a></p>
 								</div>
 							</div>
 						</div>
@@ -177,7 +177,7 @@
 								<div class="text">
 									<span class="subheading">We Design &amp; Build Brands</span>
 									<h1 class="mb-4 mt-3">Hi, I am <span>M.Unaid</span> This is my favorite work.</h1>
-									<p><a href="#" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+									<p><a href="https://wa.me/923202059130" class="btn btn-primary">Hire me</a> <a href="images/@Unaid_official_Resume.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 								</div>
 							</div>
 						</div>
@@ -254,7 +254,7 @@
 									  <a href="https://www.linkedin.com/in/muhammad-unaid-42697b277"  target="_blank" class="btn btn-linkedin me-3" id="in">
 										<i class="fab fa-linkedin fa-2x"></i>
 									  </a>
-									  <a href="https://github.com/MuahammadUnaid" target="_blank" class="btn btn-github me-3">
+									  <a href="https://github.com/Muhammad-Unaid" target="_blank" class="btn btn-github me-3">
 										<i class="fab fa-github fa-2x"></i>
 									  </a>
 									  <a href="https://www.facebook.com/muhammad.unaid.12"  target="_blank" class="btn btn-facebook me-3" id="fb">
@@ -633,7 +633,7 @@
 					<div class="ftco-footer-widget mb-4">
 						<h2 class="ftco-heading-2">Lets talk about</h2>
 						<p>Greetings! I'm an Office Automation and Front-End Developer enhancing workflows with custom software and crafting captivating web interfaces for seamless user experiences.</p>
-						<p><a href="https://github.com/MuahammadUnaid" target="_blank" class="btn btn-primary">Learn more</a></p>
+						<p><a href="https://github.com/Muhammad-Unaid" target="_blank" class="btn btn-primary">Learn more</a></p>
 					
 					</div>
 				</div>
@@ -675,7 +675,7 @@
 							<a href="https://www.linkedin.com/in/muhammad-unaid-42697b277"  target="_blank" class="btn btn-linkedin" id="in">
 							  <i class="ftco-animate"><span class="fab fa-linkedin fa-2x"></span></i>
 							</a>
-							<a href="https://github.com/MuahammadUnaid" target="_blank" class="btn btn-github">
+							<a href="https://github.com/Muhammad-Unaid" target="_blank" class="btn btn-github">
 							  <i class="ftco-animate"><span class="fab fa-github fa-2x"></span></i>
 							</a>
 							<a href="https://www.facebook.com/muhammad.unaid.12"  target="_blank" class="btn btn-facebook" id="fb">
