--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 								<div class="text">
 									<span class="subheading">Hello! This is Muhammad Unaid</span>
 									<h1 class="mb-4 mt-3"> Generative Ai Chatbot <span>Developer</SPan>     &amp; Creative UI/UX Designer</h1>
-									<p><a href="https://wa.me/923202059130" class="btn btn-primary" target="blank">Hire me</a> <a href="images/@Unaid_official_Resume.pdf" class="btn btn-primary btn-outline-primary" target="blank" >Download CV</a></p>
+									<p><a href="https://wa.me/923202059130" class="btn btn-primary" target="blank">Hire me</a> <a href="images/Unaid official_Resume.pdf" class="btn btn-primary btn-outline-primary" target="blank" >Download CV</a></p>
 								</div>
 							</div>
 						</div>
@@ -177,7 +177,7 @@
 								<div class="text">
 									<span class="subheading">We Design &amp; Build Brands</span>
 									<h1 class="mb-4 mt-3">Hi, I am <span>M.Unaid</span> This is my favorite work.</h1>
-									<p><a href="https://wa.me/923202059130" class="btn btn-primary">Hire me</a> <a href="images/@Unaid_official_Resume.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+									<p><a href="https://wa.me/923202059130" class="btn btn-primary">Hire me</a> <a href="images/Unaid official_Resume.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 								</div>
 							</div>
 						</div>
@@ -246,7 +246,7 @@
 									</div>
 								</div>
 								<div class="text"><br><br>
-									<p><a href="https://wa.me/923202059130" class="btn btn-primary text-dark">Hire me</a> <a href="images/Unaid-resume.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+									<p><a href="https://wa.me/923202059130" class="btn btn-primary text-dark">Hire me</a> <a href="images/Unaid official_Resume.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
 								 </div>
 								<div class="container mt-5">
 									<p>visit my Social media accounts.</p>
