--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
-					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+					<li644 class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 					<li class="nav-item"><a href="https://console.dialogflow.com/api-client/demo/embedded/aaf79ba2-1fc5-44dd-98c7-72b678d66298" class="nav-link"><span>Talk me</span></a></li>
 					
@@ -246,7 +246,7 @@
 									</div>
 								</div>
 								<div class="text"><br><br>
-									<p><a href="https://wa.me/923202059130" class="btn btn-primary text-dark">Hire me</a> <a href="images/Unaid official_Resume.pdf" class="btn btn-primary btn-outline-primary">Download CV</a></p>
+									<p><a href="https://wa.me/923202059130" class="btn btn-primary text-dark" target="_blank">Hire me</a> <a href="images/Unaid official_Resume.pdf" class="btn btn-primary btn-outline-primary" target="_blank">Download CV</a></p>
 								 </div>
 								<div class="container mt-5">
 									<p>visit my Social media accounts.</p>
