--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 					<li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
 					<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 					<li644 class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
+					<!-- <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 					<li class="nav-item"><a href="https://console.dialogflow.com/api-client/demo/embedded/aaf79ba2-1fc5-44dd-98c7-72b678d66298" class="nav-link"><span>Talk me</span></a></li>
-					
+					 -->
 				</ul>
 			</div>
 		</div>
